# rms-memory-mcp

./: .gitignore  CHANGELOG.md  Cargo.toml  GUI-README.md  LICENSE  NOTICE  README.md  ROADMAP.md  SECURITY.md  Walkthrough.md  jsonc_test  patch_empty.py  patch_error.py  patch_install.py  patch_loop.py  patch_mcp_server.patch  patch_watcher.py  test_fastembed.rs  test_initialize.rs  test_input.json  test_tools.json
.github/workflows/: promote-release-artifacts.yml  publish-crates.yml  release.yml  test.yml
artifacts/: v1.0.5-release-gate.md
docs/: DUAL_AUDIT_2026-07-22.md  codebase-memory-implementation-plan.md  gui-ready-core-architecture.md  multi-scope-usage.md  multilanguage-code-memory-plan.md
scripts/: bench_large_vault.sh  install.ps1  install.sh
src/: bin_test.rs  cli.rs  cli_commands_replace.rs  code_indexer.rs  code_parser.rs  config_manager.rs  document.rs  document_service.rs  graph.rs  graph_store.rs  import.rs  index_lock.rs  indexer.rs  install.rs  jobs.rs  lib.rs  link.rs  main.rs  mcp_server.rs  path_policy.rs  project_migrate.rs  project_service.rs  retrieval.rs  rules_injector.rs  semantic_graph.rs  store.rs  test.rs  test_pulldown.rs  vault_graph.rs  workspace.rs
src/commands/: config.rs  gc.rs  init.rs  mod.rs  projects.rs  simple.rs  wiki.rs
src/installer/: macos.rs  mod.rs  patcher.rs  registry.rs
src/tools/: mod.rs  read.rs  response.rs  search.rs  validation.rs  write.rs
src/wiki/: budget.rs  diagnostics.rs  manifest.rs  mod.rs  packager.rs  progress.rs  providers.rs  service.rs
templates/: claude_code_rules.md  cursor_rules.md  general_mcp_guide.md  zed_assistant_rules.md
tests/fixtures/go/: service.go
tests/fixtures/rust/: doc_attribute_struct.rs  generic_items.rs  module_doc.rs  multiple_impls.rs  nested_module.rs  no_doc.rs  outer_doc_fn.rs  outer_module_doc.rs  trait_enum.rs
