[package]
name = "rms-memory-mcp"
version = "1.0.0"
edition = "2024"

[dependencies]
anyhow = "1.0.103"
blake3 = "1.8.5"
chrono = "0.4.45"
clap = { version = "4.6.1", features = ["derive"] }
dialoguer = "0.12.0"
directories = "5.0.1"
dirs = "6.0.0"
fastembed = "5.17.2"
futures = "0.3.32"
glob = "0.3.3"
lance-index = "8.0.0"
lancedb = "0.31.0"
notify = "8.2.0"
pulldown-cmark = "0.13.4"
regex = "1.12.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
serde_yaml = "0.9.34"
similar = "3.1.1"
tokio = { version = "1.52.3", features = ["full"] }
toml = "1.1.2"
tracing = "0.1.44"
tracing-appender = "0.2.5"
tracing-subscriber = "0.3.23"
uuid = { version = "1.23.4", features = ["v4"] }
walkdir = "2.5.0"
[[bin]]
name = "rms-memory"
path = "src/main.rs"
