[package]
name = "rms-memory-mcp"
version = "1.0.6"
edition = "2024"
description = "Persistent, local-first memory for your AI coding agents."
license = "MIT"
repository = "https://github.com/max-ramas/rms-memory-mcp"
authors = ["Maksim Ramzaev <max@rms-ds.com>"]
readme = "README.md"
documentation = "https://docs.rs/rms-memory-mcp"
homepage = "https://rms-ds.com"
keywords = ["mcp", "ai", "memory", "rag", "llm"]
categories = ["command-line-utilities", "database", "development-tools"]
[package.metadata.generate-rpm]
assets = [
    { source = "target/release/rms-memory", dest = "/usr/bin/rms-memory", mode = "755" }
]

[dependencies]
anyhow = "1.0.103"
blake3 = "1.8.5"
chrono = "0.4.45"
clap = { version = "4.6.1", features = ["derive"] }
dialoguer = "0.12.0"
directories = "5.0.1"
dirs = "6.0.0"
fastembed = "5.17.2"
futures = "0.3.32"
fs2 = "0.4.3"
glob = "0.3.3"
lance-index = "8.0.0"
lancedb = "0.31.0"
notify = "8.2.0"
ort = { version = "2.0.0-rc.12", default-features = false, features = ["download-binaries"] }
pathdiff = "0.2.3"
pulldown-cmark = "0.13.4"
regex = "1.12.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
serde_yaml = "0.9.34"
similar = "3.1.1"
tokio = { version = "1.52.3", features = ["full"] }
toml = "1.1.2"
tracing = "0.1.44"
tracing-appender = "0.2.5"
tracing-subscriber = "0.3.23"
url = "2.5.8"
tempfile = "3.27.0"
uuid = { version = "1.23.4", features = ["v4"] }
walkdir = "2.5.0"
tree-sitter = "0.26.11"
tree-sitter-rust = "0.24.2"
ignore = "0.4.28"
tree-sitter-go = "0.25.0"
tree-sitter-javascript = "0.25.0"
tree-sitter-typescript = "0.23.2"
tree-sitter-python = "0.25.0"
tree-sitter-c = "0.24.2"
tree-sitter-cpp = "0.23.4"
tree-sitter-java = "0.23.5"
tree-sitter-ruby = "0.23.1"
tree-sitter-swift = "0.7.3"
octorus-tree-sitter-vue3 = "0.1.0"
[[bin]]
name = "rms-memory"
path = "src/main.rs"

[profile.release]
strip = "symbols"
lto = "thin"
codegen-units = 1
panic = "abort"

[dev-dependencies]
